Make react a peer dependency instead of a dependency

--- a/package.json
+++ b/package.json
@@ -1,24 +1,121 @@
 {
-  "name": "react-vr-textinput",
-  "version": "1.3.6",
-  "private": false,
-  "author": "Arseniy Kotov, Rishi Raje, Sim Kang",
-  "keywords": [
-    "react",
-    "vr",
-    "text input"
+  "_from": "react-vr-textinput@^1.3.7",
+  "_id": "react-vr-textinput@1.3.7",
+  "_inBundle": false,
+  "_integrity": "sha512-uTCdBEDYNMpmQFyrJR0SkoNQ/81rA7aPVPQwU9rtFdNrSDdgcpeFJiJCNAU0V0qrJtMwR7tznOMdfORXocOdOA==",
+  "_location": "/react-vr-textinput",
+  "_phantomChildren": {
+    "absolute-path": "0.0.0",
+    "ansi-regex": "2.1.1",
+    "art": "0.10.2",
+    "async": "2.6.0",
+    "babel-core": "6.26.0",
+    "babel-generator": "6.26.1",
+    "babel-plugin-external-helpers": "6.22.0",
+    "babel-plugin-syntax-trailing-function-commas": "6.22.0",
+    "babel-plugin-transform-flow-strip-types": "6.22.0",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-es2015-node": "6.1.1",
+    "babel-preset-fbjs": "2.1.4",
+    "babel-preset-react-native": "1.9.2",
+    "babel-register": "6.26.0",
+    "babel-runtime": "6.26.0",
+    "babel-traverse": "6.26.0",
+    "babel-types": "6.26.0",
+    "babylon": "6.18.0",
+    "base64-js": "1.2.3",
+    "bser": "1.0.3",
+    "chalk": "1.1.3",
+    "cli-width": "2.2.0",
+    "code-point-at": "1.1.0",
+    "commander": "2.15.1",
+    "connect": "2.30.2",
+    "debug": "2.6.9",
+    "denodeify": "1.2.1",
+    "escape-string-regexp": "1.0.5",
+    "event-target-shim": "1.1.1",
+    "exit-hook": "1.1.1",
+    "fbjs": "0.8.16",
+    "fbjs-scripts": "0.7.1",
+    "graceful-fs": "4.1.11",
+    "immutable": "3.7.6",
+    "imurmurhash": "0.1.4",
+    "inflight": "1.0.6",
+    "inherits": "2.0.3",
+    "joi": "6.10.1",
+    "json-stable-stringify": "1.0.1",
+    "json5": "0.4.0",
+    "jsonfile": "2.4.0",
+    "klaw": "1.3.1",
+    "left-pad": "1.3.0",
+    "lodash": "4.17.5",
+    "loose-envify": "1.3.1",
+    "mime": "1.6.0",
+    "mime-types": "2.1.11",
+    "minimatch": "3.0.4",
+    "minimist": "1.2.0",
+    "mkdirp": "0.5.1",
+    "multimatch": "2.1.0",
+    "node-fetch": "1.7.3",
+    "node-int64": "0.4.0",
+    "npmlog": "2.0.4",
+    "number-is-nan": "1.0.1",
+    "object-assign": "4.1.1",
+    "once": "1.4.0",
+    "opn": "3.0.3",
+    "optimist": "0.6.1",
+    "path-is-absolute": "1.0.1",
+    "plist": "1.2.0",
+    "promise": "7.3.1",
+    "react-clone-referenced-element": "1.0.1",
+    "react-timer-mixin": "0.13.3",
+    "react-transform-hmr": "1.0.4",
+    "readline2": "1.0.1",
+    "rebound": "0.0.13",
+    "regenerator-runtime": "0.9.6",
+    "request": "2.85.0",
+    "rimraf": "2.6.2",
+    "sane": "1.4.1",
+    "semver": "5.5.0",
+    "shell-quote": "1.6.1",
+    "source-map": "0.5.7",
+    "stacktrace-parser": "0.1.4",
+    "strip-ansi": "3.0.1",
+    "temp": "0.8.3",
+    "through": "2.3.8",
+    "uglify-js": "2.7.5",
+    "wordwrap": "1.0.0",
+    "worker-farm": "1.6.0",
+    "write-file-atomic": "1.3.4",
+    "ws": "1.1.5",
+    "xmldoc": "0.4.0",
+    "yargs": "6.6.0"
+  },
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "react-vr-textinput@^1.3.7",
+    "name": "react-vr-textinput",
+    "escapedName": "react-vr-textinput",
+    "rawSpec": "^1.3.7",
+    "saveSpec": null,
+    "fetchSpec": "^1.3.7"
+  },
+  "_requiredBy": [
+    "/"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/TeamRocketThesis/react-vr-textinput"
+  "_resolved": "https://registry.npmjs.org/react-vr-textinput/-/react-vr-textinput-1.3.7.tgz",
+  "_shasum": "9879539f80675d038e71617f221c31ef1a6e08f0",
+  "_spec": "react-vr-textinput@^1.3.7",
+  "_where": "/Users/elliotaplant/Desktop/attend_classes_in_360_front_end",
+  "author": {
+    "name": "Arseniy Kotov, Rishi Raje, Sim Kang"
   },
-  "scripts": {
-    "start": "node start.js",
-    "bundle": "node node_modules/react-vr/scripts/bundle.js",
-    "open": "node -e \"require('xopen')('http://localhost:8081/vr/')\"",
-    "devtools": "react-devtools",
-    "test": "jest"
+  "bugs": {
+    "url": "https://github.com/TeamRocketThesis/react-vr-textinput/issues"
   },
+  "bundleDependencies": false,
   "dependencies": {
     "chai": "^4.0.2",
     "express": "^4.15.3",
@@ -26,13 +123,11 @@
     "nodemon": "^1.11.0",
     "ovrui": "^1.1.0",
     "path": "^0.12.7",
-    "react": "~15.4.1",
-    "react-native": "~0.42.0",
-    "react-vr": "^1.1.0",
-    "react-vr-web": "^1.1.0",
     "shelljs": "^0.7.7",
     "three": "^0.80.1"
   },
+  "deprecated": false,
+  "description": "> Text Input and Virtual Keyboard for React VR",
   "devDependencies": {
     "babel-jest": "^19.0.0",
     "babel-preset-react-native": "^1.9.1",
@@ -43,7 +138,33 @@
     "react-test-renderer": "~15.4.1",
     "xopen": "1.0.0"
   },
+  "homepage": "https://github.com/TeamRocketThesis/react-vr-textinput#readme",
   "jest": {
     "preset": "react-vr"
-  }
+  },
+  "keywords": [
+    "react",
+    "vr",
+    "text input"
+  ],
+  "name": "react-vr-textinput",
+  "peerDependencies": {
+    "react": "~15.4.1",
+    "react-native": "~0.42.0",
+    "react-vr": "^1.1.0",
+    "react-vr-web": "^1.1.0"
+  },
+  "private": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TeamRocketThesis/react-vr-textinput.git"
+  },
+  "scripts": {
+    "bundle": "node node_modules/react-vr/scripts/bundle.js",
+    "devtools": "react-devtools",
+    "open": "node -e \"require('xopen')('http://localhost:8081/vr/')\"",
+    "start": "node start.js",
+    "test": "jest"
+  },
+  "version": "1.3.7"
 }
